force-app/main/default/objects/Application__c/fields/Setup_Primary_Stakeholder_Region__c.field-meta.xml
<CustomField>
    <fullName>Setup_Primary_Stakeholder_Region__c</fullName>
    <description>Region of Full Award Setup primary stakeholder</description>
    <inlineHelpText>Region of Full Award Setup primary stakeholder</inlineHelpText>
    <label>Setup Primary Stakeholder Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Region</valueSetName>
    </valueSet>
</CustomField>