force-app/main/default/objects/Application__c/fields/Setup_Total_Commissioner_Payments_High__c.field-meta.xml
<CustomField>
    <fullName>Setup_Total_Commissioner_Payments_High__c</fullName>
    <description>Full Award Setup total outcome payments by commissioners (High scenario)</description>
    <inlineHelpText>Full Award Setup total outcome payments by commissioners (High scenario)</inlineHelpText>
    <label>Setup Total Commissioner Payments (High)</label>
    <summarizedField>Form_LCF_Commissioner_1__c.st_outcome_payments_high__c</summarizedField>
    <summaryFilterItems>
        <field>Form_LCF_Commissioner_1__c.st_organisation_type__c</field>
        <operation>equals</operation>
        <value>Commissioner</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Form_LCF_Commissioner_1__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Setup</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_LCF_Commissioner_1__c.application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>