force-app/main/default/objects/Application__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(application_theme__c))),
TEXT(application_theme__c),
Application_Window_Template__r.Application_Window__r.Theme__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme</label>
    <type>Text</type>
</CustomField>