force-app/main/default/objects/Application__c/recordTypes/Expression_of_Interest.recordType-meta.xml
<RecordType>
    <fullName>Expression_of_Interest</fullName>
    <active>true</active>
    <label>Expression of Interest</label>
</RecordType>