force-app/main/default/objects/Application__c/recordTypes/Full_Application.recordType-meta.xml
<RecordType>
    <fullName>Full_Application</fullName>
    <active>true</active>
    <label>Full Application</label>
</RecordType>