force-app/main/default/objects/Application__c/validationRules/Cannot_Apply_for_Closed_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Apply_for_Closed_Application</fullName>
    <active>true</active>
    <description>Prevents applications from being submitted against a theme that is not Live</description>
    <errorConditionFormula>AND(
NOT(Application_Window_Template__r.Application_Window__r.Is_Live__c),
NOT(ISPICKVAL(Status__c , "Draft"))
)</errorConditionFormula>
    <errorMessage>The Theme you are applying for is not currently accepting applications</errorMessage>
</ValidationRule>