force-app/main/default/objects/Application__c/validationRules/Cannot_Change_Status_Closed_App.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Status_Closed_App</fullName>
    <active>true</active>
    <description>Once I made an application successful or not successful, I shouldn't be able to change that status back</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(PRIORVALUE(Status__c), "Successful"),
ISPICKVAL(PRIORVALUE(Status__c), "Unsuccessful")
),
ISCHANGED(Status__c)
)</errorConditionFormula>
    <errorMessage>You cannot change the status of an application when it has been designated as "Successful" or "Unsuccessful"</errorMessage>
</ValidationRule>