force-app/main/default/objects/Application__c/validationRules/Cannot_Edit_Submitted_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Submitted_Application</fullName>
    <active>false</active>
    <description>An applicant cannot edit an application which has been submitted</description>
    <errorConditionFormula>AND(
Is_Submitted__c = TRUE,
$User.ProfileId = "00e25000000MAf9"
)</errorConditionFormula>
    <errorMessage>You cannot edit a submitted application</errorMessage>
</ValidationRule>