force-app/main/default/objects/Application__c/validationRules/Set_Appl_to_Successful_Unsuccessful.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_Appl_to_Successful_Unsuccessful</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ProfileId = "00e25000000MAdI" &amp;&amp;
(ISPICKVAL( Status__c , "Successful")  || 
ISPICKVAL( Status__c , "Unsuccessful"))</errorConditionFormula>
    <errorMessage>Only Admin Users can set an Application to Successful or Unsuccessful</errorMessage>
</ValidationRule>