force-app/main/default/objects/Application__c/validationRules/SIB_Std_User_Cant_Edit_Submitted_App.validationRule-meta.xml
<ValidationRule>
    <fullName>SIB_Std_User_Cant_Edit_Submitted_App</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Is_Submitted__c = TRUE, 
$User.ProfileId = "00e25000000MAdI", 
NOT(ISCHANGED(Status__c)), 
NOT(ISCHANGED(Reviewer__c )))</errorConditionFormula>
    <errorMessage>You cannot edit a submitted application</errorMessage>
</ValidationRule>