force-app/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Theme__c</columns>
    <columns>Application_Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Full_Application_Status__c</columns>
    <columns>Full_Award_Setup_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Organisation_Name__c</columns>
    <columns>Reviewer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>