force-app/main/default/objects/Application__c/listViews/Applications_Assigned_to_me.listView-meta.xml
<ListView>
    <fullName>Applications_Assigned_to_me</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reviewer__c</field>
        <operation>contains</operation>
        <value>Nithya</value>
    </filters>
    <label>Applications - Assigned to me</label>
</ListView>