force-app/main/default/objects/Application__c/listViews/Early_Years.listView-meta.xml
<ListView>
    <fullName>Early_Years</fullName>
    <columns>NAME</columns>
    <columns>Organisation_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Theme__c</field>
        <operation>equals</operation>
        <value>Early Years</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Early Years</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>