force-app/main/default/objects/Application__c/listViews/Full_Application_Submitted.listView-meta.xml
<ListView>
    <fullName>Full_Application_Submitted</fullName>
    <columns>NAME</columns>
    <columns>Theme__c</columns>
    <columns>Application_Stage__c</columns>
    <columns>Full_Application_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Organisation_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Full_Application_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Full Application Submitted</label>
</ListView>