force-app/main/default/objects/Application__c/listViews/My_Applications.listView-meta.xml
<ListView>
    <fullName>My_Applications</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Reviewer__c</columns>
    <columns>Status__c</columns>
    <columns>Full_Application_Status__c</columns>
    <columns>Full_Award_Setup_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to_me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Owned_by_me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Applications</label>
</ListView>