force-app/main/default/objects/Application__c/listViews/Submitted.listView-meta.xml
<ListView>
    <fullName>Submitted</fullName>
    <columns>NAME</columns>
    <columns>Theme__c</columns>
    <columns>Application_Stage__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Submitted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Submitted</label>
</ListView>