force-app/main/default/objects/Application__c/listViews/Submitted_applicationsAfterApril.listView-meta.xml
<ListView>
    <fullName>Submitted_applicationsAfterApril</fullName>
    <columns>NAME</columns>
    <columns>Application_Stage__c</columns>
    <columns>Contact__c</columns>
    <columns>Organisation_Name__c</columns>
    <columns>Theme__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Submitted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>4/30/2017 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Successful</value>
    </filters>
    <label>Submitted applications not assessed</label>
    <sharedTo>
        <allPartnerUsers/>
    </sharedTo>
</ListView>