force-app/main/default/objects/Application__c/listViews/Submitted_round_3.listView-meta.xml
<ListView>
    <fullName>Submitted_round_3</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Development_Form_Status__c</columns>
    <columns>Status__c</columns>
    <columns>Organisation_Name__c</columns>
    <columns>Theme__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>6/1/2017 12:00 AM</value>
    </filters>
    <label>Submitted round 3</label>
</ListView>